--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "doctrine/orm": "^2.5",
-        "smarty/smarty": "~3.1"
+        "smarty/smarty": "~3.1",
+        "firebase/php-jwt": "^4.0"
     },
     "license": "Apache 2.0",
     "authors": [
