--- a/Modules/GFStarterKit/composer.json
+++ b/Modules/GFStarterKit/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "doctrine/orm": "^2.5",
         "smarty/smarty": "~3.1",
-        "firebase/php-jwt": "^4.0"
+        "firebase/php-jwt": "^4.0",
+        "jms/serializer": "^1.8"
     },
     "license": "Apache 2.0",
     "authors": [
