--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,6 @@
-Options -Indexes
-
-RewriteEngine on
-
-
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
 RewriteCond %{ENV:REDIRECT_STATUS} !200
 RewriteRule modules/([^/.]*)?/(.+)$ Modules/$1/Public/$2 [NC,L]
 
@@ -14,6 +12,4 @@ RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.gif|robots\.txt)$ [NC]
 RewriteCond %{REQUEST_FILENAME} !-f  
 RewriteCond %{REQUEST_FILENAME} !-d 
 RewriteRule ^(.*)$  index.php
-
-#RewriteCond %{HTTPS} off
-#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+</IfModule>
